--- a/index.html
+++ b/index.html
@@ -39,7 +39,52 @@
   </div>
             </div>
         </section>
- 
+        <!-- this is about as section -->
+       <section>
+        <h1 class="about-title">About US</h1>
+        <div class="about-container">
+            <div class="about-info"> 
+                <h1>We grow bands through bold & strategic creative</h1>
+                <P>Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. </P>
+                <button class="btn">contract us</button>
+            </div>
+            <div class="about-photo">
+                <img class="banner-img" src="image/section.png" alt="">
+            </div>
+
+        </div>
+
+       </section>
+<!-- service section -->
+
+ <section>
+    <h1 class="about-title" >Our services</h1>
+    <div class="service-container"> 
+        <div class="box">
+            <img class="icon" src="image/images/0.png" alt="">
+            <h2>Web development</h2>
+            <p class="box-descriptionC">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <button class="btn box-btn">Details</button>
+        </div>
+        <div class="box">
+            <img class="icon" src="image/images/1.png" alt="">
+            <h2>Web development</h2>
+            <p class="box-descriptionC">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <button class="btn box-btn">Details</button>
+        </div>
+        <div class="box">
+            <img class="icon" src="image/images/2.png" alt="">
+            <h2>Web development</h2>
+            <p class="box-descriptionC">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <button class="btn box-btn">Details</button>
+        </div>
+    </div>
+    
+
+
+ </section>
+
+    
     </main>
     <footer></footer>
 </body>
